--- a/docs/d2/speed-run-sockets/index.mdx
+++ b/docs/d2/speed-run-sockets/index.mdx
@@ -2,7 +2,7 @@ import A1FilterTable from '@site/src/components/A1FilterTable';
 
 # A1 to A4 Notes
 
-## Random level notes (assassin)
+## Random level notes (assassin only)
 
 - 2 before cold plains
 - 3: 1 point into claw mastery
@@ -24,82 +24,18 @@ import A1FilterTable from '@site/src/components/A1FilterTable';
 
 ## Skill / Stats
 
-str -> 30
-10 to energy
-rest to vit
+- str -> 30
+- 10 to energy
+- rest to vit
 
 ## Acts
 
 ### A1
 
+<details>
 **ideal bottom left start in town**
-
-<A1FilterTable
-    data={[
-        ["TR","TR","TL","TR","TL","TL"],
-        ["TR","TR","TL","TR","TL","TL"],
-        ["TR","TR","TL","TR","TL","TL"],
-    ]}
-></A1FilterTable>
-
-<details>
-<summary>Top Right</summary>
-
-| RE->BM | BM->CP | CP->SF | DW->BM   | BM->TH | OC->B          |
-|--------|--------|--------|----------|--------|----------------|
-| **TR** | **TR** | **TL** | TR       | TL     | TL             |
-| **TR** | **TL** | **TL** | TL       | TL     | TL             |
-| **TR** | **TL** | **BL** | TL       | TL     | TR             |
-| **TR** | **TL** | **TR** | TL       | TR     | TR \| BR \| TL |
-| **TR** | **TR** | **TR** | TR       | TR     | TR \| BR \| TL |
+<A1FilterTable />
 </details>
-
-
-<details>
-<summary>Top Left</summary>
-
-| RE->BM | BM->CP | CP->SF | DW->BM   | BM->TH | OC->B          |
-|--------|--------|--------|----------|--------|----------------|
-| **TL** | **TL** | **TL** | TL       | TL     | TL             |
-| **TL** | **TL** | **BL** | TL       | TL     | TR             |
-| **TL** | **BL** | **BL** | BL       | TL     | TR             |
-| **TL** | **BL** | **BR** | TR       | BR     | TR             |
-| **TL** | **TR** | **BR** | TR       | BR     | TR             |
-| **TL** | **TR** | **TL** | TR       | TL     | TL             |
-| **TL** | **TL** | **TR** | TL       | TR     | TR \| BR \| TL |
-| **TL** | **TR** | **TR** | TR       | TR     | TR \| BR \| TL |
-</details>
-
-<details>
-<summary>Bottom Right</summary>
-
-| RE->BM | BM->CP | CP->SF | DW->BM   | BM->TH | OC->B          |
-|--------|--------|--------|----------|--------|----------------|
-| **BR** | **TR** | **BR** | TR       | BR     | TR             |
-| **BR** | **TR** | **TL** | TR       | TL     | TL             |
-| **BR** | **BL** | **BL** | BL       | TL     | TR             |
-| **BR** | **BL** | **BR** | TR       | BR     | TR             |
-| **BR** | **BL** | **TL** | BL       | TL     | TL             |
-| **BR** | **BR** | **BR** | BR       | BR     | TR \| TL       |
-| **BR** | **BR** | **BL** | TR \| BL | TL     | TR             |
-| **BR** | **BR** | **TR** | BR       | TR     | TR \| BR \| TL |
-| **BR** | **TR** | **TR** | TR       | TR     | TR \| BR \| TL |
-</details>
-
-<details>
-<summary>Bottom Left</summary>
-
-| RE->BM | BM->CP | CP->SF | DW->BM   | BM->TH | OC->B          |
-|--------|--------|--------|----------|--------|----------------|
-| **BL** | **BL** | **BL** | BL       | TL     | TR             |
-| **BL** | **BL** | **BR** | TR       | BR     | TR             |
-| **BL** | **BL** | **TL** | BL       | TL     | TL             |
-| **BL** | **TL** | **TL** | TL       | TL     | TL             |
-| **BL** | **TL** | **BL** | TL       | TL     | TR             |
-| **BL** | **TL** | **TR** | TL       | TR     | TR \| BR \| TL |
-</details>
-
-<br />
 
 - **Barrack**: left/straight
 - **Jail 1 + 2**:           straight
